# phd-colours

./: .gitmodules  CMakeLists.txt
src/: main.cpp  vivid.h
